# gamedev

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  vcpkg.json
cmake/: build.cmake  config.cmake  packages.cmake
include/: main.h
src/: main.cpp
